--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -11,7 +11,7 @@ on:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-env:
+env_var:
       NEXT_PUBLIC_MONGODB: ${{ env.NEXT_PUBLIC_MONGODB }}
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
