--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -11,8 +11,8 @@ on:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-env_var:
-      NEXT_PUBLIC_MONGODB: ${{ env.NEXT_PUBLIC_MONGODB }}
+env:
+      NEXT_PUBLIC_MONGODB: ${{ secrets.NEXT_PUBLIC_MONGODB }}
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
