--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -12,7 +12,7 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 env:
-      NEXT_PUBLIC_MONGODB: ${{ vars.NEXT_PUBLIC_MONGODB }}
+      NEXT_PUBLIC_MONGODB: "123"
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
