--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -11,8 +11,6 @@ on:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-env:
-      NEXT_PUBLIC_MONGODB: ${{ vars }}
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
@@ -30,6 +28,8 @@ jobs:
   # Build job
   build:
     runs-on: ubuntu-latest
+    env:
+      NEXT_PUBLIC_MONGODB: "123"
     steps:
       - name: Checkout
         uses: actions/checkout@v4
