--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -29,7 +29,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      NEXT_PUBLIC_MONGODB: ${{ secrets.0 }}
+      NEXT_PUBLIC_MONGODB: ${{ secrets.NEXT_PUBLIC_MONGODB }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
