--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18"
-  }
+  },
+  "browser":{
+    "child_process": false
+    }  
 }
